More work on getting the character map editor to work!

--- a/src/SerialLoops/Controls/MapCharactersSubEditor.axaml
+++ b/src/SerialLoops/Controls/MapCharactersSubEditor.axaml
@@ -3,76 +3,91 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="using:SerialLoops.ViewModels.Controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:assets="using:SerialLoops.Assets"
              xmlns:models="using:SerialLoops.Models"
              xmlns:utility="using:SerialLoops.Utility"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:MapCharactersSubEditorViewModel"
-             x:Class="SerialLoops.Controls.MapCharactersSubEditor">
-    <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}">
-        <!-- Background Layer -->
-        <ItemsControl ItemsSource="{Binding BgLayer}" IsHitTestVisible="False">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate DataType="models:LayoutEntryWithImage">
-                    <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
-                           Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-            <ItemsControl.Styles>
-                <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
-                    <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
-                    <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
-                    <Setter Property="IsVisible" Value="{Binding IsVisible}"/>
-                </Style>
-            </ItemsControl.Styles>
-        </ItemsControl>
+             x:Class="SerialLoops.Controls.MapCharactersSubEditor"
+             Loaded="Control_OnLoaded">
 
-        <!-- Object Layer -->
-        <ItemsControl ItemsSource="{Binding ObjectLayer}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate DataType="models:LayoutEntryWithImage">
-                    <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
-                           Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"
-                           IsHitTestVisible="{Binding HitTestVisible}"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-            <ItemsControl.Styles>
-                <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
-                    <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
-                    <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
-                </Style>
-            </ItemsControl.Styles>
-        </ItemsControl>
+    <Grid RowDefinitions="*" ColumnDefinitions="*,Auto">
+        <Canvas Grid.Column="0" Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"
+                DragDrop.AllowDrop="True">
+            <!-- Background Layer -->
+            <ItemsControl ItemsSource="{Binding BgLayer}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="models:LayoutEntryWithImage">
+                        <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
+                               Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.Styles>
+                    <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
+                        <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
+                        <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                        <Setter Property="IsVisible" Value="{Binding IsVisible}"/>
+                    </Style>
+                </ItemsControl.Styles>
+            </ItemsControl>
 
-        <!-- Occlusion Layer -->
-        <ItemsControl ItemsSource="{Binding OcclusionLayer}" IsHitTestVisible="False">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate DataType="models:LayoutEntryWithImage">
-                    <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
-                           Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-            <ItemsControl.Styles>
-                <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
-                    <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
-                    <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
-                </Style>
-            </ItemsControl.Styles>
-        </ItemsControl>
-    </Canvas>
+            <!-- Object Layer -->
+            <ItemsControl ItemsSource="{Binding ObjectLayer}" Name="ObjectLayerItems">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="models:LayoutEntryWithImage">
+                        <Panel Opacity="0.5" PointerEntered="MapCharacter_OnPointerEntered" PointerExited="MapCharacter_OnPointerExited"
+                               PointerPressed="DoDrag" PointerReleased="MapCharacter_OnPointerReleased">
+                            <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
+                                   Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"
+                                   IsHitTestVisible="{Binding HitTestVisible}"/>
+                        </Panel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.Styles>
+                    <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
+                        <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
+                        <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                    </Style>
+                </ItemsControl.Styles>
+            </ItemsControl>
+
+            <!-- Occlusion Layer -->
+            <ItemsControl ItemsSource="{Binding OcclusionLayer}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="models:LayoutEntryWithImage">
+                        <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
+                               Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.Styles>
+                    <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
+                        <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
+                        <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                    </Style>
+                </ItemsControl.Styles>
+            </ItemsControl>
+        </Canvas>
+
+        <Grid Grid.Column="1" ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto"
+              IsVisible="{Binding SelectedMapCharacter, Converter={x:Static ObjectConverters.IsNotNull}}">
+            <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Chibi}"/>
+            <ComboBox Grid.Row="0" Grid.Column="1" Margin="10 0 0 0"/>
+        </Grid>
+    </Grid>
 </UserControl>
 
