--- a/src/SerialLoops/Controls/MapCharactersSubEditor.axaml
+++ b/src/SerialLoops/Controls/MapCharactersSubEditor.axaml
@@ -81,6 +81,54 @@
                     </Style>
                 </ItemsControl.Styles>
             </ItemsControl>
+
+            <!-- Object Locations -->
+            <ItemsControl ItemsSource="{Binding ObjectPositions}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="models:HighlightedSpace">
+                        <Path Fill="{Binding Color}" ToolTip.Tip="{Binding ToolTip}">
+                            <Path.Data>
+                                <PathGeometry>
+                                    <PathFigure StartPoint="{Binding Top}" IsClosed="True" IsFilled="True">
+                                        <LineSegment Point="{Binding Left}"/>
+                                        <LineSegment Point="{Binding Bottom}"/>
+                                        <LineSegment Point="{Binding Right}"/>
+                                    </PathFigure>
+                                </PathGeometry>
+                            </Path.Data>
+                        </Path>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
+            <!-- Character Locations -->
+            <ItemsControl ItemsSource="{Binding CharacterPositions}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="models:HighlightedSpace">
+                        <Path Fill="Chartreuse" Opacity="0.5" ToolTip.Tip="{Binding ToolTip}">
+                            <Path.Data>
+                                <PathGeometry>
+                                    <PathFigure StartPoint="{Binding Top}" IsClosed="True" IsFilled="True">
+                                        <LineSegment Point="{Binding Left}"/>
+                                        <LineSegment Point="{Binding Bottom}"/>
+                                        <LineSegment Point="{Binding Right}"/>
+                                    </PathFigure>
+                                </PathGeometry>
+                            </Path.Data>
+                        </Path>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </Canvas>
 
         <Grid Grid.Column="1" ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto"
