More work on interactable objects

--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -7,6 +7,7 @@
              xmlns:controls="using:SerialLoops.Controls"
              xmlns:i="using:Avalonia.Xaml.Interactivity"
              xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
+             xmlns:local="using:SerialLoops.Views.Editors"
              xmlns:utility="using:SerialLoops.Utility"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:ScriptEditorViewModel"
@@ -115,7 +116,39 @@
                     </TabItem>
 
                     <TabItem Header="{x:Static assets:Strings.Interactable_Objects}">
+                        <Panel>
+                            <Grid RowDefinitions="*,Auto,Auto" ColumnDefinitions="Auto,Auto" IsVisible="{Binding HasInteractableObjects}">
+                                <ListBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
+                                         ItemsSource="{Binding InteractableObjects}" SelectedItem="{Binding SelectedInteractableObject}">
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate x:DataType="vm:ReactiveInteractableObject">
+                                            <StackPanel Orientation="Horizontal" Spacing="20">
+                                                <ComboBox Margin="10,0,0,0"
+                                                          ItemsSource="{Binding ScriptSections}"
+                                                          SelectedItem="{Binding InteractSection}">
+                                                    <ComboBox.ItemTemplate>
+                                                        <DataTemplate DataType="vm:ReactiveScriptSection">
+                                                            <TextBlock Text="{Binding  Name}"/>
+                                                        </DataTemplate>
+                                                    </ComboBox.ItemTemplate>
+                                                    <ComboBox.ItemContainerTheme>
+                                                        <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:ReactiveScriptSection">
+                                                            <Setter Property="TextSearch.Text" Value="{Binding Name}" />
+                                                        </ControlTheme>
+                                                    </ComboBox.ItemContainerTheme>
+                                                </ComboBox>
+                                                <TextBlock Text="{Binding Description}"/>
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
+                                <Button Grid.Row="1" Grid.Column="0" Content="{x:Static assets:Strings.Add_Interactable_Object}" Command="{Binding AddInteractableObjectCommand}"/>
+                                <Button Grid.Row="1" Grid.Column="1" Content="{x:Static assets:Strings.Remove_Interactable_Object}" Command="{Binding RemoveInteractableObjectCommand}"/>
 
+                                <Button Grid.Row="2" Grid.Column="0" Content="{x:Static assets:Strings.Remove_Interactable_Objects}" Command="{Binding RemoveInteractableObjectsSectionCommand}"/>
+                            </Grid>
+                            <Button IsVisible="{Binding !HasInteractableObjects}" Content="{x:Static assets:Strings.Add_Interactable_Objects}" Command="{Binding AddInteractableObjectsSectionCommand}"/>
+                        </Panel>
                     </TabItem>
                 </TabControl.Items>
             </TabControl>
