--- a/src/SerialLoops/Views/Dialogs/AddInteractableObjectDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/AddInteractableObjectDialog.axaml
@@ -12,6 +12,10 @@
         Title="{x:Static assets:Strings.Add_Interactable_Object}"
         Name="Dialog">
     <StackPanel Orientation="Vertical" Spacing="10" Margin="10">
+        <TextBlock IsVisible="{Binding !HackApplied}"
+                   Text="{x:Static assets:Strings.InteractableObjectsAsmHackMessage}"
+                   TextWrapping="Wrap"/>
+
         <ListBox ItemsSource="{Binding UnusedInteractableObjects}"
                  SelectedItem="{Binding SelectedInteractableObject}">
             <ListBox.ItemTemplate>
