--- a/src/SerialLoops/Views/Editors/MapEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/MapEditorView.axaml
@@ -276,6 +276,25 @@
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
+                    <ItemsControl ItemsSource="{Binding InteractableObjectsHiglightLayer}" IsVisible="{Binding InteractableObjectsDisplayed}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate DataType="models:LayoutEntryWithImage">
+                                <Rectangle Stroke="{Binding Tint, Converter={StaticResource BrushConverter}}"
+                                           StrokeThickness="4" Width="{Binding ScreenWidth}" Height="{Binding ScreenHeight}"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                        <ItemsControl.Styles>
+                            <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
+                                <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
+                                <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                            </Style>
+                        </ItemsControl.Styles>
+                    </ItemsControl>
 
                     <!-- Unknown 2 Objects -->
                     <ItemsControl ItemsSource="{Binding Unknown2s}" IsVisible="{Binding Unknown2sDisplayed}">
