--- a/src/SerialLoops/Views/Panels/HomePanel.axaml
+++ b/src/SerialLoops/Views/Panels/HomePanel.axaml
@@ -27,7 +27,7 @@
                     <controls:LinkButton Command="{Binding MainWindow.OpenProjectCommand}" Text="{x:Static assets:Strings.Open_Project}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Spacing="5">
-                    <!-- <Svg Path="avares://SerialLoops/Assets/Icons/Import.svg" Width="16"/> -->
+                    <Svg Path="avares://SerialLoops/Assets/Icons/Import_Project.svg" Width="16"/>
                     <controls:LinkButton Command="{Binding MainWindow.ImportProjectCommand}" Text="{x:Static assets:Strings.Import_Project}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Spacing="5">
